# SyncStream

./: .gitignore  README.md
backend/: Dockerfile.server  Dockerfile.worker  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/auth/: router.py  util.py
backend/backend/: __init__.py  docker-compose.yml
backend/backend/server/: Dockerfile  __init__.py  main.py  yt.py
backend/backend/server/auth/: router.py  util.py
backend/backend/server/config/: config.py
backend/backend/server/db/: db.py
backend/backend/server/model/: model.py
backend/backend/server/public/: public_routes.py
backend/backend/server/room/: room_routes.py  room_service.py  test_ws.py  ws.py  ws_manager.py
backend/backend/server/user/: routes.py  service.py
backend/backend/server/videotask/: routes.py  service.py
backend/backend/worker/: Dockerfile  tasks.py  test_celery.py
backend/config/: config.py
backend/model/: model.py  user_model.py
backend/server/: requirements.txt
backend/server/auth/: router.py  util.py
backend/server/db/: db.py
backend/server/model/: model.py
backend/server/user/: model.py
backend/server/videotask/: routes.py  service.py
backend/user/: routes.py  service.py
backend/videotask/: routes.py  service.py
depo/: server.yaml
frontend/: package-lock.json  package.json  vercel.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/Auth/: SignInModal.tsx  SignUpModal.tsx
frontend/src/components/Home/: Home.tsx  JoinRoomModal.tsx
frontend/src/components/Layout/: DashboardLayout.tsx
frontend/src/components/Room/: ChatBox.tsx  RoomList.tsx  RoomPage.tsx  RoomSkeleton.tsx  TestRoom.tsx  VideoPlayer.tsx  YouTubePlayer.tsx
frontend/src/components/Video/: VideoList.tsx  VideoSkeleton.tsx
frontend/src/config/: axios.ts  config.ts
frontend/src/hooks/: useAuth.ts  useRoom.ts  useVideo.ts  useWebSocket.ts
frontend/src/lib/: util.ts
frontend/src/router/: Router.index.tsx
frontend/src/services/: authService.ts  roomService.ts  videoService.ts
frontend/src/store/: userStore.ts
frontend/src/types/: auth.ts  room.ts  video.ts
video_task/: routes.py
(+4 files in other folders)
