[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Siddhanta Acharya",email = "siddhu12980@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.36.11,<2.0.0",
    "fastapi>=0.115.8,<0.116.0",
    "pydantic (==2.8.0)",
    "greenlet (==3.1.1)",
    "celery (>=5.4.0,<6.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "ffmpeg-python (==0.2.0)",
    "python-magic (==0.4.27)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "sqlmodel (>=0.0.22,<0.0.23)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "encode (>=0.0.0,<0.0.1)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "websockets (>=14.2,<15.0)",
]

[tool.poetry]
packages = [
    {include = "backend"}
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
